--- a/env.example
+++ b/env.example
@@ -1,3 +1,6 @@
 VITE_SUPABASE_URL=https://YOUR_PROJECT_REF.supabase.co
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 VITE_WORKSPACE_ID=default
+
+# Optional (dev only): seed demo CRM/campaigns if Supabase tables are empty
+# VITE_SEED_DEMO_DATA=true
