--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "smtp-gateway": "node server/smtp-gateway.mjs"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@supabase/supabase-js": "^2.57.4",
+    "express": "^4.21.2",
+    "lucide-react": "^0.561.0",
+    "nodemailer": "^6.10.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@supabase/supabase-js": "^2.57.4",
-    "lucide-react": "^0.561.0",
-    "recharts": "^3.6.0",
-    "express": "^4.21.2",
-    "nodemailer": "^6.10.0"
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
