--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodemailer": "^6.10.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-router-dom": "^7.11.0",
     "recharts": "^3.6.0"
   },
   "devDependencies": {
